header text alignments fixed

--- a/main.less
+++ b/main.less
@@ -55,6 +55,7 @@ a, ul {
 }
 
 .header-img {
+	position: relative;
 	img {
 		width:100%;
 		height:100%;
@@ -63,23 +64,30 @@ a, ul {
 	}
 	/*fix it*/
 	.text-box {
-		position:absolute;
-		
-		top:14.5rem;
+		display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+	    position: absolute;
+		top:0rem;
 		left:15%;
 		width:24rem;
+		height:100%;
 		color:#FFF;
 	}
 		h1 {
 			font-size:2.25rem;
 			font-weight: 700;
-			padding-bottom:2.75rem;
-		/*	margin:0;*/
+			padding-top:30%;
+			padding-bottom: 2.75rem;
+			margin:0;
 		}
 		p {
 			font-size:1rem;
 			line-height: 1.25rem;
 			padding-bottom:2.75rem;
+		}
+		button {
+			width:50%;
 		}
 }
 
